[gd_scene load_steps=5 format=3 uid="uid://xkjk8b3j283s"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_7muqx"]
[ext_resource type="PackedScene" uid="uid://dgb3ubanl7ucn" path="res://scenes/lattice_grid.tscn" id="2_4qubn"]
[ext_resource type="PackedScene" uid="uid://dnibem6i2pwss" path="res://scenes/polygon.tscn" id="3_b5vrg"]
[ext_resource type="PackedScene" uid="uid://lotaw6d6q6u5" path="res://scenes/camera.tscn" id="4_oqnx0"]

[node name="level" type="Node2D"]
script = ExtResource("1_7muqx")

[node name="lattice_grid" parent="." instance=ExtResource("2_4qubn")]

[node name="polygon" parent="." instance=ExtResource("3_b5vrg")]

[node name="camera" parent="." instance=ExtResource("4_oqnx0")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="buttons" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -264.0
offset_right = -24.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="debug_cut" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "debug cut
"

[node name="debug_cut_input" type="LineEdit" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "0"
placeholder_text = "degrees"

[node name="circle" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "circle"

[node name="gomory" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "gomory"

[node name="h_split" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "h split"

[node name="v_split" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
text = "v split"

[node name="show_hull" type="Button" parent="CanvasLayer/HUD/buttons"]
layout_mode = 2
focus_mode = 0
action_mode = 0
keep_pressed_outside = true
text = "CONV. HULL"

[node name="open_menu" type="Button" parent="CanvasLayer/HUD"]
layout_mode = 2
offset_left = -128.0
offset_top = -1048.0
offset_right = -24.0
offset_bottom = -944.0
text = "Open
Menu"

[node name="panel" type="Panel" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = -1280.0
offset_top = -776.0
offset_right = -640.0
offset_bottom = -304.0

[node name="Label" type="Label" parent="CanvasLayer/HUD/panel"]
layout_mode = 0
offset_left = 248.0
offset_top = 32.0
offset_right = 392.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 50
text = "Menu"

[node name="reload" type="Button" parent="CanvasLayer/HUD/panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 184.0
offset_right = 480.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 30
text = "Reload Scene (Ctrl+R)"

[node name="exit" type="Button" parent="CanvasLayer/HUD/panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 280.0
offset_right = 480.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"

[node name="x" type="Button" parent="CanvasLayer/HUD/panel"]
layout_mode = 0
offset_left = 568.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 72.0
text = "X"

[node name="vfx" type="Node2D" parent="."]

[node name="click_vfxs" type="Node2D" parent="vfx"]

[connection signal="pressed" from="CanvasLayer/HUD/buttons/debug_cut" to="." method="_on_debug_cut_pressed"]
[connection signal="text_changed" from="CanvasLayer/HUD/buttons/debug_cut_input" to="." method="_on_debug_cut_input_text_changed"]
[connection signal="pressed" from="CanvasLayer/HUD/buttons/circle" to="." method="_on_circle_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/buttons/gomory" to="." method="_on_gomory_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/buttons/h_split" to="." method="_on_h_split_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/buttons/v_split" to="." method="_on_v_split_pressed"]
[connection signal="button_down" from="CanvasLayer/HUD/buttons/show_hull" to="." method="_on_show_hull_button_down"]
[connection signal="button_up" from="CanvasLayer/HUD/buttons/show_hull" to="." method="_on_show_hull_button_up"]
[connection signal="pressed" from="CanvasLayer/HUD/open_menu" to="." method="_on_open_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/panel/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/panel/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/panel/x" to="." method="_on_x_pressed"]
